# coursework3

./: pyproject.toml
src/: main.py  utils.py
tests/: test_utils.py
tests/data/: test_operations.json
